monitoring-infra/k8s/dummy-app/ingress.yaml
# dummy-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dummy.blurryfaced.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-app-service
            port:
              number: 80
